# cuba-vs-covid

./: README.MD  docker-compose.yml
backend/: .gitignore  Dockerfile  prod.py  pyproject.toml
backend/apps/api/: schema.py  urls.py
backend/apps/api/mutations/: auth.py  products.py  users.py  workshops.py
backend/apps/api/queries/: geo.py  products.py  users.py  workshops.py
backend/apps/api/types/: geo.py  products.py  users.py  workshops.py
backend/apps/core/: admin.py  models.py
backend/apps/core/fixtures/: data.json
backend/backend/: asgi.py  urls.py
backend/backend/apps/api/: apps.py  auth.py  schema.py
backend/backend/apps/api/mutations/: auth.py  products.py  users.py
backend/backend/apps/api/queries/: geo.py  products.py  stlmodels.py  users.py
backend/backend/apps/api/types/: geo.py  products.py  stlmodels.py  users.py
backend/backend/apps/core/: admin.py  apps.py  models.py
backend/backend/apps/uploads/: admin.py  apps.py  models.py  urls.py  views.py
backend/backend/settings/: base.py
frontend/: Dockerfile  README.md  nuxt.config.js  package.json
frontend/apollo/: client.js
frontend/assets/: styles.css
frontend/components/: Modal.vue  Navbar.vue  PhotoUploader.vue  ProductCard.vue  STLModelCard.vue  WorkshopCard.vue
frontend/layouts/: dashboard.vue  default.vue
frontend/pages/: index.vue  login.vue  register.vue
frontend/pages/dashboard/: index.vue  profile.vue  workshop.vue
frontend/pages/pages/: impression-config.vue
frontend/pages/stlmodel/: _id.vue
frontend/store/: auth.js
nginx/: default.conf
(+5 files in other folders)
