[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Carlos Lugones <contact@lugodev.com>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.0.4"
graphene = "^2.1.8"
graphene-django = "^2.9.0"
django-cors-headers = "^3.2.1"
djangorestframework-jwt = "^1.11.0"
djangorestframework = "^3.11.0"
pillow = "^7.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
